syntax = "proto3";
package validate;

option go_package = "github.com/envoyproxy/protoc-gen-validate/validate";

import "google/protobuf/descriptor.proto";

// 兼容层：将原有的 validate.rules 映射到 buf.validate.field
extend google.protobuf.FieldOptions {
  // Rules specify the validations to be performed on this field.
  FieldRules rules = 1071;
}

// 兼容层：将原有的 message.required 保留
extend google.protobuf.MessageOptions {
  bool disabled = 1071;
  bool ignored = 1072;
}

// 兼容层：将原有的 oneof.required 保留
extend google.protobuf.OneofOptions {
  bool required = 1071;
}

// FieldRules encapsulates the rules for each type of field.
message FieldRules {
  oneof type {
    // Scalar Field Types
    FloatRules float = 1;
    DoubleRules double = 2;
    Int32Rules int32 = 3;
    Int64Rules int64 = 4;
    UInt32Rules uint32 = 5;
    UInt64Rules uint64 = 6;
    SInt32Rules sint32 = 7;
    SInt64Rules sint64 = 8;
    Fixed32Rules fixed32 = 9;
    Fixed64Rules fixed64 = 10;
    SFixed32Rules sfixed32 = 11;
    SFixed64Rules sfixed64 = 12;
    BoolRules bool = 13;
    StringRules string = 14;
    BytesRules bytes = 15;

    // Complex Field Types
    EnumRules enum = 16;
    MessageRules message = 17;
    RepeatedRules repeated = 18;
    MapRules map = 19;
  }
}

// FloatRules describes the constraints applied to `float` values
message FloatRules {
  // Const specifies that this field must be exactly the specified value
  optional float const = 1;
  // Lt specifies that this field must be less than the specified value
  optional float lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional float lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional float gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional float gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated float in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated float not_in = 7;
}

// DoubleRules describes the constraints applied to `double` values
message DoubleRules {
  // Const specifies that this field must be exactly the specified value
  optional double const = 1;
  // Lt specifies that this field must be less than the specified value
  optional double lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional double lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional double gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional double gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated double in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated double not_in = 7;
}

// Int32Rules describes the constraints applied to `int32` values
message Int32Rules {
  // Const specifies that this field must be exactly the specified value
  optional int32 const = 1;
  // Lt specifies that this field must be less than the specified value
  optional int32 lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional int32 lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional int32 gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional int32 gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated int32 in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated int32 not_in = 7;
}

// Int64Rules describes the constraints applied to `int64` values
message Int64Rules {
  // Const specifies that this field must be exactly the specified value
  optional int64 const = 1;
  // Lt specifies that this field must be less than the specified value
  optional int64 lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional int64 lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional int64 gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional int64 gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated int64 in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated int64 not_in = 7;
}

// UInt32Rules describes the constraints applied to `uint32` values
message UInt32Rules {
  // Const specifies that this field must be exactly the specified value
  optional uint32 const = 1;
  // Lt specifies that this field must be less than the specified value
  optional uint32 lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional uint32 lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional uint32 gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional uint32 gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated uint32 in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated uint32 not_in = 7;
}

// UInt64Rules describes the constraints applied to `uint64` values
message UInt64Rules {
  // Const specifies that this field must be exactly the specified value
  optional uint64 const = 1;
  // Lt specifies that this field must be less than the specified value
  optional uint64 lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional uint64 lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional uint64 gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional uint64 gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated uint64 in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated uint64 not_in = 7;
}

// SInt32Rules describes the constraints applied to `sint32` values
message SInt32Rules {
  // Const specifies that this field must be exactly the specified value
  optional int32 const = 1;
  // Lt specifies that this field must be less than the specified value
  optional int32 lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional int32 lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional int32 gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional int32 gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated int32 in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated int32 not_in = 7;
}

// SInt64Rules describes the constraints applied to `sint64` values
message SInt64Rules {
  // Const specifies that this field must be exactly the specified value
  optional int64 const = 1;
  // Lt specifies that this field must be less than the specified value
  optional int64 lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional int64 lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional int64 gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional int64 gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated int64 in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated int64 not_in = 7;
}

// Fixed32Rules describes the constraints applied to `fixed32` values
message Fixed32Rules {
  // Const specifies that this field must be exactly the specified value
  optional uint32 const = 1;
  // Lt specifies that this field must be less than the specified value
  optional uint32 lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional uint32 lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional uint32 gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional uint32 gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated uint32 in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated uint32 not_in = 7;
}

// Fixed64Rules describes the constraints applied to `fixed64` values
message Fixed64Rules {
  // Const specifies that this field must be exactly the specified value
  optional uint64 const = 1;
  // Lt specifies that this field must be less than the specified value
  optional uint64 lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional uint64 lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional uint64 gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional uint64 gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated uint64 in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated uint64 not_in = 7;
}

// SFixed32Rules describes the constraints applied to `sfixed32` values
message SFixed32Rules {
  // Const specifies that this field must be exactly the specified value
  optional int32 const = 1;
  // Lt specifies that this field must be less than the specified value
  optional int32 lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional int32 lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional int32 gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional int32 gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated int32 in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated int32 not_in = 7;
}

// SFixed64Rules describes the constraints applied to `sfixed64` values
message SFixed64Rules {
  // Const specifies that this field must be exactly the specified value
  optional int64 const = 1;
  // Lt specifies that this field must be less than the specified value
  optional int64 lt = 2;
  // Lte specifies that this field must be less than or equal to the specified value
  optional int64 lte = 3;
  // Gt specifies that this field must be greater than the specified value
  optional int64 gt = 4;
  // Gte specifies that this field must be greater than or equal to the specified value
  optional int64 gte = 5;
  // In specifies that this field must be equal to one of the specified values
  repeated int64 in = 6;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated int64 not_in = 7;
}

// BoolRules describes the constraints applied to `bool` values
message BoolRules {
  // Const specifies that this field must be exactly the specified value
  optional bool const = 1;
}

// StringRules describes the constraints applied to `string` values
message StringRules {
  // Const specifies that this field must be exactly the specified value
  optional string const = 1;
  // Len specifies that this field must be the specified number of characters
  optional uint64 len = 19;
  // MinLen specifies that this field must be at least the specified number of characters
  optional uint64 min_len = 2;
  // MaxLen specifies that this field must be at most the specified number of characters
  optional uint64 max_len = 3;
  // LenBytes specifies that this field must be the specified number of bytes
  optional uint64 len_bytes = 20;
  // MinBytes specifies that this field must be at least the specified number of bytes
  optional uint64 min_bytes = 4;
  // MaxBytes specifies that this field must be at most the specified number of bytes
  optional uint64 max_bytes = 5;
  // Pattern specifies that this field must match the specified regular expression (RE2 syntax)
  optional string pattern = 6;
  // Prefix specifies that this field must have the specified substring at the beginning of the string
  optional string prefix = 7;
  // Suffix specifies that this field must have the specified substring at the end of the string
  optional string suffix = 8;
  // Contains specifies that this field must have the specified substring anywhere in the string
  optional string contains = 9;
  // NotContains specifies that this field cannot have the specified substring anywhere in the string
  optional string not_contains = 23;
  // In specifies that this field must be equal to one of the specified values
  repeated string in = 10;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated string not_in = 11;

  // WellKnown rules provide advanced constraints against common string patterns
  oneof well_known {
    // Email specifies that the field must be a valid email address
    bool email = 12;
    // Hostname specifies that the field must be a valid hostname
    bool hostname = 13;
    // Ip specifies that the field must be a valid IP (v4 or v6) address
    bool ip = 14;
    // Ipv4 specifies that the field must be a valid IPv4 address
    bool ipv4 = 15;
    // Ipv6 specifies that the field must be a valid IPv6 address
    bool ipv6 = 16;
    // Uri specifies that the field must be a valid URI
    bool uri = 17;
    // UriRef specifies that the field must be a valid URI reference
    bool uri_ref = 18;
    // Address specifies that the field must be either a valid hostname or IP address
    bool address = 21;
    // Uuid specifies that the field must be a valid UUID
    bool uuid = 22;
  }
}

// BytesRules describes the constraints applied to `bytes` values
message BytesRules {
  // Const specifies that this field must be exactly the specified value
  optional bytes const = 1;
  // Len specifies that this field must be the specified number of bytes
  optional uint64 len = 13;
  // MinLen specifies that this field must be at least the specified number of bytes
  optional uint64 min_len = 2;
  // MaxLen specifies that this field must be at most the specified number of bytes
  optional uint64 max_len = 3;
  // Pattern specifies that this field must match the specified regular expression (RE2 syntax)
  optional string pattern = 4;
  // Prefix specifies that this field must have the specified bytes at the beginning
  optional bytes prefix = 5;
  // Suffix specifies that this field must have the specified bytes at the end
  optional bytes suffix = 6;
  // Contains specifies that this field must have the specified bytes anywhere
  optional bytes contains = 7;
  // In specifies that this field must be equal to one of the specified values
  repeated bytes in = 8;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated bytes not_in = 9;

  // WellKnown rules provide advanced constraints against common byte patterns
  oneof well_known {
    // Ip specifies that the field must be a valid IP (v4 or v6) address in byte format
    bool ip = 10;
    // Ipv4 specifies that the field must be a valid IPv4 address in byte format
    bool ipv4 = 11;
    // Ipv6 specifies that the field must be a valid IPv6 address in byte format
    bool ipv6 = 12;
  }
}

// EnumRules describes the constraints applied to enum values
message EnumRules {
  // Const specifies that this field must be exactly the specified value
  optional int32 const = 1;
  // DefinedOnly specifies that this field must be only one of the defined values for this enum
  optional bool defined_only = 2;
  // In specifies that this field must be equal to one of the specified values
  repeated int32 in = 3;
  // NotIn specifies that this field cannot be equal to one of the specified values
  repeated int32 not_in = 4;
}

// MessageRules describe the constraints applied to embedded message values
message MessageRules {
  // Skip specifies that the validation rules of this field should not be evaluated
  optional bool skip = 1;
  // Required specifies that this field must be set
  optional bool required = 2;
}

// RepeatedRules describe the constraints applied to `repeated` values
message RepeatedRules {
  // MinItems specifies that this field must have the specified number of items at minimum
  optional uint64 min_items = 1;
  // MaxItems specifies that this field must have the specified number of items at maximum
  optional uint64 max_items = 2;
  // Unique specifies that all elements in this field must be unique
  optional bool unique = 3;
  // Items specifies the constraints to be applied to each item in the field
  optional FieldRules items = 4;
}

// MapRules describe the constraints applied to `map` values
message MapRules {
  // MinPairs specifies that this field must have the specified number of KVs at minimum
  optional uint64 min_pairs = 1;
  // MaxPairs specifies that this field must have the specified number of KVs at maximum
  optional uint64 max_pairs = 2;
  // Keys specifies the constraints to be applied to each key in the field
  optional FieldRules keys = 3;
  // Values specifies the constraints to be applied to each value in the field
  optional FieldRules values = 4;
}
